refactor project folder structure and added rabbitmq client
