# app/internal/models/template.model.go
@@ -1,0 +1,8 @@
+package models
+
+// swagger:model Template
+type Template struct {
+	ID      int    `json:"id"`
+	Name    string `json:"name"`
+	Message string `json:"message"`
+}
