# app/internal/routers/router.go
@@ -4,20 +4,25 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/recover"
-
 	"github.com/gofiber/swagger"
+	"github.com/gulizay91/template-go-api/config"
+	"github.com/gulizay91/template-go-api/internal/handlers"
+	"github.com/streadway/amqp"
 	// docs are generated by Swag CLI, you have to import them.
 	// replace with your own docs folder, usually "github.com/username/reponame/docs"
 	_ "github.com/gulizay91/template-go-api/docs"
 )
 
 type Router struct {
-	appRouter *fiber.App
+	templateHandler *handlers.TemplateHandler
+	appRouter       *fiber.App
 }
 
-func NewRouter(appRouter *fiber.App) *Router {
+func NewRouter(appRouter *fiber.App, config *config.Config, amqpConn *amqp.Connection, amqpChannel *amqp.Channel) *Router {
+	templateHandler := handlers.NewTemplateHandler(config, amqpConn, amqpChannel)
 	return &Router{
-		appRouter: appRouter,
+		appRouter:       appRouter,
+		templateHandler: templateHandler,
 	}
 }
 
@@ -34,7 +39,8 @@ func (router *Router) AddRouter() {
 	// Create routes group.
 	route := router.appRouter.Group("/api/v1")
 
-	route.Get("/template", GetTemplate)
+	route.Get("/template", router.templateHandler.GetTemplate)
+	route.Post("/template/message", router.templateHandler.SendTemplateMessage)
 }
 
 // HealthCheck godoc
@@ -75,29 +81,4 @@ func ReadyCheck(c *fiber.Ctx) error {
 	}
 
 	return nil
-}
-
-type Template struct {
-	ID      int    `json:"id"`
-	Name    string `json:"name"`
-	Message string `json:"message"`
-}
-
-var templateArray []Template
-
-// GetTemplate godoc
-// @Summary get template
-// @Description get template
-// @Tags templates
-// @Accept */*
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router /api/v1/template [get]
-func GetTemplate(c *fiber.Ctx) error {
-
-	templateArray = append(templateArray, Template{ID: 1, Name: "Name1", Message: "Message1"})
-	templateArray = append(templateArray, Template{ID: 2, Name: "Name2", Message: "Message2"})
-	templateArray = append(templateArray, Template{ID: 3, Name: "Name3", Message: "Message3"})
-
-	return c.JSON(templateArray)
 }
